--- a/src/weekView/weekView.css
+++ b/src/weekView/weekView.css
@@ -1,8 +1,22 @@
+
 .day-container{
-  border: 1px solid black; 
+  border-top:1px solid black;
+  border-bottom:1px solid black;
+  border-right: 1px solid black;
   min-width: 14vw; 
   max-width: 15vw;
+  height: 200px;
 }
+
+.days-container > div:first-of-type{
+  border-left: 1px solid black;
+}
+.days-container > div:last-of-type{
+  border-right: 1px solid black;
+}
+/* .days-container > div:last-child{
+  border-right: 1px solid black;
+} */
 
 .day-container div{
   padding-top: 3px;
